--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,15 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "easy-peasy": "^3.3.1",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
-    "styled-components": "^5.1.1"
+    "react-slick": "^0.27.9",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.1.1",
+    "swiper": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
